@@ -169,6 +169,11 @@ type List struct {
 	value []Node
 }
 
+// NewList creates a new list with provided nodes.
+func NewList(nodes []Node) *List {
+	return &List{nodes}
+}
+
 func (l *List) String() string {
 	var sb strings.Builder
 	for i := 0; i < len(l.value); i++ {
